[project]
name = "qa-lesson16"
version = "0.1.0"
description = ""
authors = [
    {name = "A.Ivanov",email = "sasha1_00@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selene (>=1.0.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)"
]
